--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Project-06</title>
     <link
       href="https://fonts.googleapis.com/css?family=Allerta"
       rel="stylesheet"
@@ -42,13 +42,13 @@
 
       <div id="navEnd">
         <div>
-          <img src="/Sandbox Projects/live-class-project-6/photos/cart.svg" />
+          <img src="photos/cart.svg" />
         </div>
         <div>
-          <img src="./photos/user.svg" />
+          <img src="photos/user.svg" />
         </div>
         <div>
-          <img src="./photos/search.svg" />
+          <img src="photos/search.svg" />
         </div>
       </div>
     </nav>
@@ -75,14 +75,14 @@
               <h1>DISCOVER</h1>
             </div>
             <div id="midWholePart122">
-              <img src="./photos/greaterThan.svg" />
+              <img src="photos/greaterThan.svg" />
             </div>
           </div>
         </div>
         <div id="midWholePart13">
           <div class="midWholePart13Parts">
             <div>
-              <img id="feeding" src="./photos/water plant.png" />
+              <img id="feeding" src="photos/water plant.png" />
             </div>
             <div>
               <h4 id="fee">Feeding</h4>
@@ -93,7 +93,7 @@
           </div>
           <div class="midWholePart13Parts">
             <div>
-              <img id="light" src="./photos/light.svg" alt="" />
+              <img id="light" src="photos/light.svg" alt="" />
             </div>
             <div>
               <h4 id="lig">Light</h4>
@@ -104,7 +104,7 @@
           </div>
           <div class="midWholePart13Parts">
             <div>
-              <img id="care" src="./photos/plough.svg" />
+              <img id="care" src="photos/plough.svg" />
             </div>
             <div>
               <h4 id="car">Care</h4>
@@ -116,7 +116,7 @@
         </div>
       </div>
       <div>
-        <img id="imgMain" src="./photos/6_folwer_cut.png" />
+        <img id="imgMain" src="photos/6_folwer_cut.png" />
       </div>
     </div>
   </body>
